force-app/main/default/objects/Topic_Tag__c/Topic_Tag__c.object-meta.xml
<CustomObject>
    <description>Junction object to tag topics for Articles, Tickets, and Announcements</description>
    <label>Topic Tag</label>
    <nameField>
        <displayFormat>Tag-{00000}</displayFormat>
        <label>Topic Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topic Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>