force-app/main/default/objects/Topic_Tag__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Announcement</label>
    <referenceTo>Announcement__c</referenceTo>
    <relationshipLabel>Topic Tags</relationshipLabel>
    <relationshipName>Topic_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>