force-app/main/default/objects/Topic_Tag__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Topic Tags</relationshipLabel>
    <relationshipName>Topic_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>