force-app/main/default/objects/Topic_Tag__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Topic Tags</relationshipLabel>
    <relationshipName>Topic_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>