force-app/main/default/objects/Topic_Tag__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>Returns the name of the record related to this topic, hyperlinked to the record page</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Related_Record_ID__c, Related_Record_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the name of the record related to this topic, hyperlinked to the record page</inlineHelpText>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>