force-app/main/default/objects/Topic_Tag__c/fields/Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_ID__c</fullName>
    <description>Returns the record ID of the record related to this topic</description>
    <formula>CASE( Related_Record_Type__c,
 &quot;Announcement&quot;, Announcement__c,
 &quot;Article&quot;, Article__c,
 &quot;Publication&quot;, Publication__c,
 &quot;Ticket&quot;, Ticket__c,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the record ID of the record related to this topic</inlineHelpText>
    <label>Related Record ID</label>
    <type>Text</type>
</CustomField>