force-app/main/default/objects/Topic_Tag__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <description>Returns the name of the record related to this topic</description>
    <formula>CASE( Related_Record_Type__c,
 &quot;Announcement&quot;, Announcement__r.Name,
 &quot;Article&quot;, Article__r.Name,
 &quot;Publication&quot;, Publication__r.Name,
 &quot;Ticket&quot;, Ticket__r.Name,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the name of the record related to this topic</inlineHelpText>
    <label>Related Record Name</label>
    <type>Text</type>
</CustomField>