force-app/main/default/objects/Topic_Tag__c/fields/Related_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Type__c</fullName>
    <description>Returns the sObject type of the record related to this topic</description>
    <formula>IF( !ISBLANK( Announcement__c ),
 &quot;Announcement&quot;,
 IF( !ISBLANK( Article__c ),
  &quot;Article&quot;,
  IF( !ISBLANK( Publication__c ),
   &quot;Publication&quot;,
   IF( !ISBLANK( Ticket__c ),
    &quot;Ticket&quot;,
    &quot;&quot;
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the sObject type of the record related to this topic</inlineHelpText>
    <label>Related Record Type</label>
    <type>Text</type>
</CustomField>