force-app/main/default/objects/Topic_Tag__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Topic Tags</relationshipLabel>
    <relationshipName>Topic_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>