force-app/main/default/objects/Topic_Tag__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Topic Tags</relationshipLabel>
    <relationshipName>Topic_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>